chapter multi_quant

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -37,9 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get final quantile estimation results\n",
     "def get_res(procs):\n",
     "    if len(procs.shape)!=2:raise Exception('Procs of wrong shape:' + str(procs.shape)+ ', should be 2d array')\n",
-    "    \n",
     "    return procs[:, -1]"
    ]
   },
@@ -93,11 +93,11 @@
    "outputs": [],
    "source": [
     "def quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, \n",
-    "                         g_test=False, s_test=False, tau_lst=[0.1, 0.3, 0.5, 0.9, 0.99], \n",
+    "                         MULTI_GENERATION=False, SHUFFLE=False, tau_lst=[0.1, 0.3, 0.5, 0.9, 0.99], \n",
     "                        method_name='SGD',\n",
     "                        ):\n",
     "    \n",
-    "    if g_test and s_test: raise Exception(\"g_test and s_test can't both be true\")\n",
+    "    if MULTI_GENERATION and SHUFFLE: raise Exception(\"MULTI_GENERATION and SHUFFLE can't both be true\")\n",
     "    \n",
     "    # generate different settings\n",
     "    setting_lst, changed_setting = get_settings(distro_lst, datasize_lst, stepsize_lst,)\n",
@@ -105,21 +105,23 @@
     "    \n",
     "    # if only stepsize changes, generate dataset and q_batches\n",
     "    dataset, q_batches = 0, 0\n",
-    "    if len(distro_lst)==1 and len(datasize_lst)==1:\n",
-    "        dataset = get_dataset(distro_lst[0], datasize_lst[0], g_test)\n",
+    "    MULTI_DATASET = False if len(distro_lst)==1 and len(datasize_lst)==1 else True\n",
+    "    if not MULTI_DATASET:\n",
+    "        dataset = get_dataset(distro_lst[0], datasize_lst[0], MULTI_GENERATION)\n",
     "        q_batches = get_q_batches(dataset, tau_lst)\n",
     "        \n",
-    "    # for each setting = [distro, datasize, stepsize]\n",
+    "    # each setting = [distro, datasize, stepsize]\n",
     "    for idx, setting in enumerate(setting_lst):\n",
     "        \n",
     "        # generate all the data\n",
     "        distro, datasize, stepsize = setting[0], int(setting[1]), setting[2]\n",
     "        q_true = get_q_true(distro, tau_lst)\n",
-    "        if len(distro_lst)!=1 or len(datasize_lst)!=1:\n",
-    "            dataset = get_dataset(distro, datasize, g_test)\n",
+    "        if MULTI_DATASET:\n",
+    "            # if dataset needs to be updated\n",
+    "            dataset = get_dataset(distro, datasize, MULTI_GENERATION)\n",
     "            q_batches = get_q_batches(dataset, tau_lst)\n",
-    "        if s_test: \n",
-    "            dataset = get_shuffled_dataset(dataset, datasize, s_test)\n",
+    "        if SHUFFLE: \n",
+    "            dataset = get_shuffled_dataset(dataset, datasize, SHUFFLE)\n",
     "        q_est_res, q_est_proc = get_q_ests(dataset, tau_lst, method_name, stepsize)\n",
     "        E = get_normalized_e(q_true, q_batches, q_est_res)\n",
     "        \n",
@@ -131,13 +133,24 @@
     "            'E': E\n",
     "        }\n",
     "        # generate charts and tables?\n",
-    "        file_name = get_file_name(changed_setting, distro, datasize, stepsize, s_test)\n",
+    "        file_name = get_file_name(changed_setting, distro, datasize, stepsize, SHUFFLE)\n",
     "        save_data(folder_name, file_name, tau_lst, data_dict, method_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def get_more_plot(SHUFFLE):\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,18 +169,18 @@
     "        \n",
     "        args = args_dict.get(t)\n",
     "        distro_lst, datasize_lst, stepsize_lst =  args[0], args[1], args[2]\n",
-    "        g_test = args[3]\n",
-    "        s_test = False if len(args)<5 else args[4]\n",
+    "        MULTI_GENERATION = args[3]\n",
+    "        SHUFFLE = False if len(args)<5 else args[4]\n",
     "        tau_lst = tau_vals\n",
-    "        print (s_test)\n",
+    "        print (SHUFFLE)\n",
     "        \n",
-    "        quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, g_test, s_test, tau_lst, method_name=root_folder)\n",
+    "        quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, MULTI_GENERATION, SHUFFLE, tau_lst, method_name=root_folder)\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,82 +193,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "distro\n",
-      "False\n",
-      "[['mix' '1000' 'const']\n",
-      " ['gau_1' '1000' 'const']\n",
-      " ['gau_2' '1000' 'const']\n",
-      " ['exp' '1000' 'const']]\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/distro/mix_q_true.txt\n",
-      "Experiment_results/P2/distro/mix_q_batches.txt\n",
-      "Experiment_results/P2/distro/mix_q_est_res.txt\n",
-      "Experiment_results/P2/distro/mix_q_est_proc.txt\n",
-      "Experiment_results/P2/distro/mix_E.txt\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/distro/gau_1_q_true.txt\n",
-      "Experiment_results/P2/distro/gau_1_q_batches.txt\n",
-      "Experiment_results/P2/distro/gau_1_q_est_res.txt\n",
-      "Experiment_results/P2/distro/gau_1_q_est_proc.txt\n",
-      "Experiment_results/P2/distro/gau_1_E.txt\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/distro/gau_2_q_true.txt\n",
-      "Experiment_results/P2/distro/gau_2_q_batches.txt\n",
-      "Experiment_results/P2/distro/gau_2_q_est_res.txt\n",
-      "Experiment_results/P2/distro/gau_2_q_est_proc.txt\n",
-      "Experiment_results/P2/distro/gau_2_E.txt\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/distro/exp_q_true.txt\n",
-      "Experiment_results/P2/distro/exp_q_batches.txt\n",
-      "Experiment_results/P2/distro/exp_q_est_res.txt\n",
-      "Experiment_results/P2/distro/exp_q_est_proc.txt\n",
-      "Experiment_results/P2/distro/exp_E.txt\n",
-      "data_size\n",
-      "False\n",
-      "[['gau_2' '100' 'const']\n",
-      " ['gau_2' '1000' 'const']\n",
-      " ['gau_2' '10000' 'const']]\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/data_size/100_q_true.txt\n",
-      "Experiment_results/P2/data_size/100_q_batches.txt\n",
-      "Experiment_results/P2/data_size/100_q_est_res.txt\n",
-      "Experiment_results/P2/data_size/100_q_est_proc.txt\n",
-      "Experiment_results/P2/data_size/100_E.txt\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/data_size/1000_q_true.txt\n",
-      "Experiment_results/P2/data_size/1000_q_batches.txt\n",
-      "Experiment_results/P2/data_size/1000_q_est_res.txt\n",
-      "Experiment_results/P2/data_size/1000_q_est_proc.txt\n",
-      "Experiment_results/P2/data_size/1000_E.txt\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/data_size/10000_q_true.txt\n",
-      "Experiment_results/P2/data_size/10000_q_batches.txt\n",
-      "Experiment_results/P2/data_size/10000_q_est_res.txt\n",
-      "Experiment_results/P2/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/P2/data_size/10000_E.txt\n",
-      "data_sequence\n",
-      "True\n",
-      "[['gau_1' '1000' 'const']\n",
-      " ['gau_1' '1000' 'const']]\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/data_sequence/shuffle_q_true.txt\n",
-      "Experiment_results/P2/data_sequence/shuffle_q_batches.txt\n",
-      "Experiment_results/P2/data_sequence/shuffle_q_est_res.txt\n",
-      "Experiment_results/P2/data_sequence/shuffle_q_est_proc.txt\n",
-      "Experiment_results/P2/data_sequence/shuffle_E.txt\n",
-      "get_q_ests using method_name P2\n",
-      "Experiment_results/P2/data_sequence/shuffle_q_true.txt\n",
-      "Experiment_results/P2/data_sequence/shuffle_q_batches.txt\n",
-      "Experiment_results/P2/data_sequence/shuffle_q_est_res.txt\n",
-      "Experiment_results/P2/data_sequence/shuffle_q_est_proc.txt\n",
-      "Experiment_results/P2/data_sequence/shuffle_E.txt\n"
+     "ename": "Exception",
+     "evalue": "input distro should be a list!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-4b48012df2eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcompare_lst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'distro'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data_size'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data_sequence'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m initialize_folders(main_fd = 'Experiment_results/', fd_lst = [main_folder], \n\u001b[0;32m----> 6\u001b[0;31m                        sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = 'distro')\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mall_method_comparisons\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'distro'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmain_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/ANU_study/Honors/eheye/QuantEst/sgd_est_experiment/Output_data_generation.py\u001b[0m in \u001b[0;36minitialize_folders\u001b[0;34m(main_fd, fd_lst, sub_fd_lst, subsub_fd_lst)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0minput_lst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"input {} should be a list!\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;31m# print (fd_lst, sub_fd_lst, subsub_fd_lst)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: input distro should be a list!"
      ]
     }
    ],
@@ -265,13 +215,13 @@
     "main_folder = 'P2'\n",
     "compare_lst = ['distro', 'data_size', 'data_sequence']\n",
     "initialize_folders(main_fd = 'Experiment_results/', fd_lst = [main_folder], \n",
-    "                       sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = compare_lst)\n",
-    "all_method_comparisons(compare_lst, main_folder)"
+    "                       sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = 'distro')\n",
+    "all_method_comparisons(['distro'], main_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,32 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment_results/P2/distro/gau_1_\n",
-      "q label is  P2\n",
-      "q label is  P2\n",
-      "q label is  P2\n",
-      "Experiment_results/P2/distro/mix_\n",
-      "q label is  P2\n",
-      "q label is  P2\n",
-      "q label is  P2\n",
-      "Experiment_results/P2/distro/gau_2_\n",
-      "q label is  P2\n",
-      "q label is  P2\n",
-      "q label is  P2\n",
-      "Experiment_results/P2/distro/exp_\n",
-      "q label is  P2\n",
-      "q label is  P2\n",
-      "q label is  P2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
