--- a/Q_BAI/Q_UGapEc_20arms-new_env-group_two.ipynb
+++ b/Q_BAI/Q_UGapEc_20arms-new_env-group_two.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<class 'codes.Environment.Mixture_AbsGau'>: [[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]], <class 'codes.Environment.Exp'>: [[0.25], [0.25]]}\n"
+     ]
+    }
+   ],
    "source": [
     "# environment\n",
     "\n",
@@ -42,7 +50,7 @@
     "    {Mixture_AbsGau: [[0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
     "                      [0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
     "                      [0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
+    "                      [0, 1.5, 0,1, 1], \n",
     "                      [0, 1.5, 0,1, 1],  \n",
     "                      [0, 1.5, 0,1, 1], \n",
     "                      [0, 1.5, 0,1, 1], \n",
@@ -55,7 +63,7 @@
     "                      [0, 1.5, 0,1, 1], \n",
     "                      [0, 1.5, 0,1, 1],\n",
     "                     ],\n",
-    "     Exp: [[1/3.6]\n",
+    "     Exp: [[1/4], [1/4]\n",
     "          ]\n",
     "    } # mu1, sigma1, mu2, sigma2, p\n",
     "    \n",
@@ -63,14 +71,15 @@
     "\n",
     "\n",
     "tau = 0.8 # quantile level\n",
-    "est_flag = False # True: estimate the lower bound of hazard rate L; False: use the true L\n",
+    "est_flag = True # True: estimate the lower bound of hazard rate L; False: use the true L\n",
+    "\n",
     "\n",
     "rewards_env, quantiles, Ls, means, samples = setup_env(environments, tau)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +110,7 @@
     "                p.description = 'Running'\n",
     "                display(p)\n",
     "                results[name][subname] = []\n",
-    "                for m in [1]:\n",
+    "                for m in [2]:\n",
     "                    #print('m: ', m)\n",
     "                    results[name][subname].append(simulate(rewards_env[key],summary_stats[key], policy, \n",
     "                                                 epsilon, tau, m, budget_or_confi, num_exper, est_flag, hyperpara, None,  p, fixed_samples_list))"
@@ -109,7 +118,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_exper_mean(rewards_env, hyperpara_list, num_arms, num_exper, budget_or_confi, epsilon, policy, summary_stats, fixed_samples_list = None):\n",
+    "    for key in rewards_env.keys():\n",
+    "        for hyperpara in hyperpara_list:\n",
+    "            name = key + '_' + str(num_exper) + '_' + str(budget_or_confi) \n",
+    "            policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
+    "            subname = policy_name + str(hyperpara) \n",
+    "            print(name + subname)\n",
+    "            p = IntProgress(max = num_exper)\n",
+    "            p.description = 'Running'\n",
+    "            display(p)\n",
+    "            results[name][subname] = []\n",
+    "            for m in [2]:\n",
+    "                #print('m: ', m)\n",
+    "                results[name][subname].append(simulate_mean(rewards_env[key],summary_stats[key], policy, \n",
+    "                                             epsilon, m, budget_or_confi, num_exper, hyperpara, p, fixed_samples_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,17 +149,39 @@
     "\n",
     "results = defaultdict(dict)\n",
     "num_arms = 16\n",
-    "num_exper = 100\n",
+    "num_exper = 10\n",
     "confi = 0.05\n",
-    "epsilon = 0\n",
-    "hyperpara_list = [[0.0001], [0.0005, 1], [0.001]]"
+    "epsilon = 0.05\n",
+    "hyperpara_list = [[0.01], [0.05, 1]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]]Exp_[[0.25], [0.25]]_10_0.05Q_UGapEc-[0.01]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "47bd2a2b909e4e7d827db1b01cf969a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, description='Running', max=10)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exper(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, tau, Q_UGapEc, quantiles, fixed_samples_list = fixed_samples_list)\n",
     "\n",
@@ -179,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
