--- a/Q_BAI/Q_UGapEc_20arms-new_env-group_two.ipynb
+++ b/Q_BAI/Q_UGapEc_20arms-new_env-group_two.ipynb
@@ -23,8 +23,9 @@
     "from prettytable import PrettyTable\n",
     "\n",
     "from codes.Q_BAI import Q_UGapEc, QPAC\n",
+    "from codes.Mean_BAI import UGapEc\n",
     "from codes.Environment import Mixture_AbsGau, setup_env, Exp\n",
-    "from codes.SimulatedGames import simulate\n",
+    "from codes.SimulatedGames import simulate, simulate_mean\n",
     "from codes.plots import plot_hist, plot_eva, plot_eva_m\n",
     "\n",
     "%matplotlib inline"
@@ -145,6 +146,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def run_exper_mean(rewards_env, hyperpara_list, num_arms, num_exper, budget_or_confi, epsilon, policy, summary_stats, fixed_samples_list = None):\n",
+    "    for key in rewards_env.keys():\n",
+    "        for hyperpara in hyperpara_list:\n",
+    "            name = key + '_' + str(num_exper) + '_' + str(budget_or_confi) \n",
+    "            policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
+    "            subname = policy_name + str(hyperpara) \n",
+    "            print(name + subname)\n",
+    "            p = IntProgress(max = num_exper)\n",
+    "            p.description = 'Running'\n",
+    "            display(p)\n",
+    "            results[name][subname] = []\n",
+    "            for m in [2]:\n",
+    "                #print('m: ', m)\n",
+    "                results[name][subname].append(simulate_mean(rewards_env[key],summary_stats[key], policy, \n",
+    "                                             epsilon, m, budget_or_confi, num_exper, hyperpara, p, fixed_samples_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# setting\n",
     "\n",
     "results = defaultdict(dict)\n",
@@ -152,7 +176,7 @@
     "num_exper = 10\n",
     "confi = 0.05\n",
     "epsilon = 0.05\n",
-    "hyperpara_list = [[0.01], [0.05, 1]]"
+    "hyperpara_list = [[0.0001]]"
    ]
   },
   {
@@ -164,13 +188,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]]Exp_[[0.25], [0.25]]_10_0.05Q_UGapEc-[0.01]\n"
+      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]]Exp_[[0.25], [0.25]]_10_0.05Q_UGapEc-[0.0001]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47bd2a2b909e4e7d827db1b01cf969a0",
+       "model_id": "72cef0933b40465bb9c87aa05938114c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,12 +204,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rec_Set:  {18, 19}\n",
+      "rec_Set:  {18, 19}\n",
+      "rec_Set:  {18, 19}\n"
+     ]
     }
    ],
    "source": [
     "run_exper(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, tau, Q_UGapEc, quantiles, fixed_samples_list = fixed_samples_list)\n",
     "\n",
     "# run_exper(rewards_env, hyperpara_list, num_arms, num_exper, budget, epsilon, tau, uniform_sampling, quantiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hyperpara_list = [[1, 1], [0.8, 1]]\n",
+    "run_exper_mean(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, UGapEc, means, fixed_samples_list = fixed_samples_list)"
    ]
   },
   {
@@ -233,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
