--- a/Q_BAI/Q_UGapEc_20arms-new_env-group_two.ipynb
+++ b/Q_BAI/Q_UGapEc_20arms-new_env-group_two.ipynb
@@ -176,7 +176,7 @@
     "num_exper = 10\n",
     "confi = 0.05\n",
     "epsilon = 0.05\n",
-    "hyperpara_list = [[0.0001]]"
+    "hyperpara_list = [[0.00001]]"
    ]
   },
   {
@@ -188,13 +188,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]]Exp_[[0.25], [0.25]]_10_0.05Q_UGapEc-[0.0001]\n"
+      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]]Exp_[[0.25], [0.25]]_10_0.05Q_UGapEc-[1e-05]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72cef0933b40465bb9c87aa05938114c",
+       "model_id": "8bf75f2640c847fda1cc18a51643322b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,6 +209,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rec_Set:  {18, 19}\n",
+      "rec_Set:  {18, 19}\n",
+      "rec_Set:  {18, 19}\n",
+      "rec_Set:  {18, 19}\n",
+      "rec_Set:  {18, 19}\n",
       "rec_Set:  {18, 19}\n",
       "rec_Set:  {18, 19}\n",
       "rec_Set:  {18, 19}\n"
@@ -276,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
