shiftQ python code

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -154,15 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def all_method_comparisons(compare_lst, root_folder='SGD'):\n",
-    "    \n",
-    "    args_dict = {\n",
-    "        'distro': (distros, [1000], ['const'], True),\n",
-    "        'data_size': (['gau_2'], [100, 1000, 10000], ['const'], True),\n",
-    "        'step_size': (['gau_1'], [1000], stepsizes, True),\n",
-    "        'data_sequence':(['gau_1', 'gau_1'], [1000], ['const'], False, True),\n",
-    "    }\n",
-    "    \n",
+    "def all_method_comparisons(compare_lst, args_dict, root_folder='SGD'):\n",
+    "\n",
     "    for t in compare_lst:\n",
     "        print (t)\n",
     "        folder_name = \"Experiment_results/{}/{}/\".format(root_folder, t)\n",
@@ -193,35 +186,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "input distro should be a list!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-4b48012df2eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcompare_lst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'distro'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data_size'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data_sequence'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m initialize_folders(main_fd = 'Experiment_results/', fd_lst = [main_folder], \n\u001b[0;32m----> 6\u001b[0;31m                        sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = 'distro')\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mall_method_comparisons\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'distro'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmain_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/ANU_study/Honors/eheye/QuantEst/sgd_est_experiment/Output_data_generation.py\u001b[0m in \u001b[0;36minitialize_folders\u001b[0;34m(main_fd, fd_lst, sub_fd_lst, subsub_fd_lst)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0minput_lst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"input {} should be a list!\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;31m# print (fd_lst, sub_fd_lst, subsub_fd_lst)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: input distro should be a list!"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_size\n",
+      "False\n",
+      "[['positive gau_1' '100' 'const']\n",
+      " ['positive gau_1' '1000' 'const']\n",
+      " ['positive gau_1' '10000' 'const']]\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "get_q_ests using method_name shiftQ\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "Experiment_results/shiftQ/data_size/100_q_true.txt\n",
+      "Experiment_results/shiftQ/data_size/100_q_batches.txt\n",
+      "Experiment_results/shiftQ/data_size/100_q_est_res.txt\n",
+      "Experiment_results/shiftQ/data_size/100_q_est_proc.txt\n",
+      "Experiment_results/shiftQ/data_size/100_E.txt\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "get_q_ests using method_name shiftQ\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "Experiment_results/shiftQ/data_size/1000_q_true.txt\n",
+      "Experiment_results/shiftQ/data_size/1000_q_batches.txt\n",
+      "Experiment_results/shiftQ/data_size/1000_q_est_res.txt\n",
+      "Experiment_results/shiftQ/data_size/1000_q_est_proc.txt\n",
+      "Experiment_results/shiftQ/data_size/1000_E.txt\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "gau_1\n",
+      "get_q_ests using method_name shiftQ\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "shiftQ Overall crossing 0\n",
+      "Experiment_results/shiftQ/data_size/10000_q_true.txt\n",
+      "Experiment_results/shiftQ/data_size/10000_q_batches.txt\n",
+      "Experiment_results/shiftQ/data_size/10000_q_est_res.txt\n",
+      "Experiment_results/shiftQ/data_size/10000_q_est_proc.txt\n",
+      "Experiment_results/shiftQ/data_size/10000_E.txt\n"
      ]
     }
    ],
    "source": [
     "# Run all functions\n",
     "Folder_options = ['SGD', 'Frugal', 'Adaptive', 'P2']\n",
-    "main_folder = 'P2'\n",
+    "main_folder = 'shiftQ'\n",
     "compare_lst = ['distro', 'data_size', 'data_sequence']\n",
+    "\n",
+    "    \n",
+    "args_dict = {\n",
+    "    'distro': (distros, [1000], ['const'], True),\n",
+    "    'data_size': (['gau_2'], [100, 1000, 10000], ['const'], True),\n",
+    "    'step_size': (['gau_1'], [1000], stepsizes, True),\n",
+    "    'data_sequence':(['gau_1', 'gau_1'], [1000], ['const'], False, True),\n",
+    "}\n",
+    "\n",
+    "args_dict_shift_Q = {\n",
+    "    'distro': (['positive mix', 'positive gau_1', 'positive gau_2', 'positive exp'], [1000], ['const'], True),\n",
+    "    'data_size': (['positive gau_1'], [100, 1000, 10000], ['const'], True),\n",
+    "    'data_sequence':(['positive gau_1', 'positive gau_1'], [1000], ['const'], False, True),\n",
+    "}\n",
+    "\n",
     "initialize_folders(main_fd = 'Experiment_results/', fd_lst = [main_folder], \n",
-    "                       sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = 'distro')\n",
-    "all_method_comparisons(['distro'], main_folder)"
+    "                       sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = ['data_size'])\n",
+    "all_method_comparisons(['data_size'], args_dict_shift_Q, main_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,13 +405,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/shiftQ/data_size/100_\n",
+      "q label is  shiftQ\n",
+      "q label is  shiftQ\n",
+      "q label is  shiftQ\n",
+      "Experiment_results/shiftQ/data_size/10000_\n",
+      "q label is  shiftQ\n",
+      "q label is  shiftQ\n",
+      "q label is  shiftQ\n",
+      "Experiment_results/shiftQ/data_size/1000_\n",
+      "q label is  shiftQ\n",
+      "q label is  shiftQ\n",
+      "q label is  shiftQ\n"
+     ]
+    }
+   ],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
-    "plot_charts(\"Experiment_results/P2/distro\")"
+    "plot_charts(\"Experiment_results/shiftQ/data_size\")"
    ]
   },
   {
