Tried compiling all chapter drafts, it works

--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -97,14 +97,14 @@
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 
-% \include{Chapters/literature_review} % Chapter 1
-% \include{Chapters/SAG}
+\include{Chapters/literature_review} % Chapter 1
+\include{Chapters/SAG}
 \include{Chapters/Multi_quant}
-% \include{Chapters/smooth_func}
-% \include{Chapters/SGD}
-% \include{Chapters/algorithm_equivalence}
-% \include{Chapters/Simultaneous_SGD}
-% \include{Chapters/sgd_experiment}
+\include{Chapters/smooth_func}
+\include{Chapters/SGD}
+\include{Chapters/algorithm_equivalence}
+\include{Chapters/Simultaneous_SGD}
+\include{Chapters/sgd_experiment}
 
 \cleardoublepage % Empty page before the start of the next part
 
