--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -96,15 +96,15 @@
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
-
+\include{Chapters/Introduction}
 % \include{Chapters/literature_review} % Chapter 1
-% \include{Chapters/SAG}
-\include{Chapters/Multi_quant}
-% \include{Chapters/smooth_func}
 % \include{Chapters/SGD}
 % \include{Chapters/algorithm_equivalence}
-% \include{Chapters/Simultaneous_SGD}
 % \include{Chapters/sgd_experiment}
+% \include{Chapters/SAG}
+% \include{Chapters/smooth_func}
+% \include{Chapters/Multi_quant}
+
 
 \cleardoublepage % Empty page before the start of the next part
 
