lit review fixed

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -484,7 +484,7 @@
 
 @article{liechtySinglepassLowstorageArbitrary,
   title = {Single-Pass Low-Storage Arbitrary Quantile Estimation for Massive Datasets},
-  author = {Liechty, John C and Lin, Dennis K J and McDERMOTT, JAMES P},
+  author = {Liechty, John C and Lin, Dennis K J and McDermott, JAMES P},
   pages = {10},
   file = {/Users/sue/Zotero/storage/ULN3TXRW/Liechty et al. - Single-pass low-storage arbitrary quantile estimat.pdf},
   language = {en}
