--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -96,8 +96,8 @@
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
-\include{Chapters/Introduction}
-% \include{Chapters/literature_review} % Chapter 1
+% \include{Chapters/Introduction}
+\include{Chapters/literature_review} % Chapter 1
 % \include{Chapters/SGD}
 % \include{Chapters/algorithm_equivalence}
 % \include{Chapters/sgd_experiment}
