--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -96,7 +96,7 @@
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
-% \include{Chapters/Introduction}
+\include{Chapters/Introduction}
 \include{Chapters/literature_review} % Chapter 1
 % \include{Chapters/SGD}
 % \include{Chapters/algorithm_equivalence}
