--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -98,8 +98,8 @@
 %----------------------------------------------------------------------------------------
 \include{Chapters/Introduction}
 \include{Chapters/literature_review} % Chapter 1
-% \include{Chapters/SGD}
-% \include{Chapters/algorithm_equivalence}
+\include{Chapters/Background}
+\include{Chapters/algorithm_equivalence}
 % \include{Chapters/sgd_experiment}
 % \include{Chapters/SAG}
 % \include{Chapters/smooth_func}
