frugal vs SGD modification, next step is to plot q_compares

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -18,7 +18,7 @@
     "import os\n",
     "from Dataset_generation import get_dataset, get_q_batches, get_q_true, get_shuffled_dataset\n",
     "from Output_data_generation import initialize_folders, get_settings, get_file_name, save_data\n",
-    "from Quantile_procs import get_procs"
+    "from Quantile_procs import get_procs, get_res"
    ]
   },
   {
@@ -34,18 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get final quantile estimation results\n",
-    "def get_res(procs):\n",
-    "    if len(procs.shape)!=2:raise Exception('Procs of wrong shape:' + str(procs.shape)+ ', should be 2d array')\n",
-    "    return procs[:, -1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,147 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data_size\n",
-      "False\n",
-      "[['positive gau_1' '100' 'const']\n",
-      " ['positive gau_1' '1000' 'const']\n",
-      " ['positive gau_1' '10000' 'const']]\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "get_q_ests using method_name shiftQ\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "Experiment_results/shiftQ/data_size/100_q_true.txt\n",
-      "Experiment_results/shiftQ/data_size/100_q_batches.txt\n",
-      "Experiment_results/shiftQ/data_size/100_q_est_res.txt\n",
-      "Experiment_results/shiftQ/data_size/100_q_est_proc.txt\n",
-      "Experiment_results/shiftQ/data_size/100_E.txt\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "get_q_ests using method_name shiftQ\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "Experiment_results/shiftQ/data_size/1000_q_true.txt\n",
-      "Experiment_results/shiftQ/data_size/1000_q_batches.txt\n",
-      "Experiment_results/shiftQ/data_size/1000_q_est_res.txt\n",
-      "Experiment_results/shiftQ/data_size/1000_q_est_proc.txt\n",
-      "Experiment_results/shiftQ/data_size/1000_E.txt\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "gau_1\n",
-      "get_q_ests using method_name shiftQ\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "shiftQ Overall crossing 0\n",
-      "Experiment_results/shiftQ/data_size/10000_q_true.txt\n",
-      "Experiment_results/shiftQ/data_size/10000_q_batches.txt\n",
-      "Experiment_results/shiftQ/data_size/10000_q_est_res.txt\n",
-      "Experiment_results/shiftQ/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/shiftQ/data_size/10000_E.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run all functions\n",
     "Folder_options = ['SGD', 'Frugal', 'Adaptive', 'P2']\n",
@@ -349,39 +199,7 @@
     "\n",
     "initialize_folders(main_fd = 'Experiment_results/', fd_lst = [main_folder], \n",
     "                       sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = ['data_size'])\n",
-    "all_method_comparisons(['data_size'], args_dict_shift_Q, main_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def sgd_frugal_compare(distro_lst, datasize, tau_lst=tau_vals):\n",
-    "#     #distro changes, use the biggest datasize, do not shuffle\n",
-    "#     for distro in distro_lst:\n",
-    "#         q_true = get_q_true(distro, tau_lst)\n",
-    "#         dataset = get_dataset(distro, datasize, False)\n",
-    "#         q_batches = get_q_batches(dataset, tau_lst)\n",
-    "        \n",
-    "#         sgd_res, sgd_proc = get_q_ests(dataset, 'const', tau_lst)\n",
-    "        \n",
-    "#         N_frugal = 20\n",
-    "#         frugal_res = np.zeros((N_frugal, len(tau_lst)))\n",
-    "#         frugal_proc = np.zeros((N_frugal, len(tau_lst), datasize))\n",
-    "#         for i in range(N_frugal):\n",
-    "#             frugal_res[i], frugal_proc[i] = get_q_ests(dataset, 'frugal', tau_lst)\n",
-    "        \n",
-    "#         ax_name = 'Tested on '+distro+' distritbution with '+str(datasize)+' data points'\n",
-    "#         fig, lgd = plot_procs(ax_name, tau_vals, q_true, frugal_proc, sgd_proc)\n",
-    "#         title = fig.suptitle('Quantile Estimation: Frugal vs SGD')\n",
-    "\n",
-    "#         fd = \"Experiment_results/Frugal_SGD/\"\n",
-    "#         plt.savefig(fd+distro+'.png', bbox_extra_artists=(lgd, title), bbox_inches='tight')\n",
-    "        \n",
-    "        \n",
-    "# sgd_frugal_compare(distros, 1000)"
+    "# all_method_comparisons(['data_size'], args_dict_shift_Q, main_folder)"
    ]
   },
   {
@@ -405,32 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment_results/shiftQ/data_size/100_\n",
-      "q label is  shiftQ\n",
-      "q label is  shiftQ\n",
-      "q label is  shiftQ\n",
-      "Experiment_results/shiftQ/data_size/10000_\n",
-      "q label is  shiftQ\n",
-      "q label is  shiftQ\n",
-      "q label is  shiftQ\n",
-      "Experiment_results/shiftQ/data_size/1000_\n",
-      "q label is  shiftQ\n",
-      "q label is  shiftQ\n",
-      "q label is  shiftQ\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
-    "plot_charts(\"Experiment_results/shiftQ/data_size\")"
+    "# plot_charts(\"Experiment_results/shiftQ/data_size\")"
    ]
   },
   {
